<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/dialog_root">

	<RadioGroup
		android:id="@+id/typeSwitch"
		style="@style/RadioSwitch">

		<RadioButton
			style="@style/switch_radio"
			android:text="@string/all"
			android:id="@+id/option_all"
			android:checked="true"/>

		<RadioButton
			style="@style/switch_radio"
			android:text="@string/folder"
			android:id="@+id/option_folder"/>

		<RadioButton
			style="@style/switch_radio"
			android:text="@string/file"
			android:id="@+id/option_file"/>

	</RadioGroup>

	<LinearLayout
		style="@style/input">

		<TextView
			style="@style/input_text"
			android:text="@string/regex"/>

		<EditText
			style="@style/input_edit"
			android:id="@+id/input_regex"/>

	</LinearLayout>

</LinearLayout>

